--- a/About Me.html
+++ b/About Me.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <link href="stylesheet" rel="stylesheet.css" />
     <title>Seth Van Horn</title>
-    <h1>Seth Van Horn</h1>
 </head>
 <body>
     <nav>
@@ -18,9 +17,18 @@
             </ul>
         </div>
     </nav>
-    <div id="Introduction">
-        <h2>Introduction</h2>
-        <p>Strong professional with a Bachelor's degree focused in Management information Systems and Entrepreneurship & Venture Management from the University of Oklahoma. Experienced in several programming languages including C#, SQL, & Java. A clear understanding of the Oil and Gas and OFC industry. Motivated individual seeking full-time employment in the Summer of 2020</p>
+    <div id="AboutMe">
+        <h2>About Me</h2>
+        <p>University of Oklahoma</p>
+        <p>Graduation Date: May of 2020</p>
+        <p>Major: Entrepreneurship and MIS</p>
+        <p>
+            <ul>
+                <li><a href="https://github.com/sethvanhorn">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/seth-van-horn-045884170/">Linkedin</a></li>
+            </ul>
+           
+        </p>
     </div>
 </body>
 </html>
