--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,26 @@
-<h1>TEST </h1>
+<!DOCTYPE html>
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="utf-8" />
+    <link href="Stylin" rel="Stylin.css" />
+    <title>Seth Van Horn</title>
+    <h1>Seth Van Horn</h1>
+</head>
+<body>
+    <nav>
+        <div class="box">
+            <ul>
+                <li><a href="Home.html">Home</a></li>
+                <li><a href="Projects.html">Projects</a></li>
+                <li><a href="Skillsets.html">Skillsets</a></li>
+
+            </ul>
+        </div>
+    </nav>
+    <div id="Introduction">
+        <h2>Introduction</h2>
+        <p>Strong professional with a Bachelor's degree focused in Management information Systems and Entrepreneurship & Venture Management from the University of Oklahoma. Experienced in several programming languages including C#, SQL, & Java. A clear understanding of the Oil and Gas and OFC industry. Motivated individual seeking full-time employment in the Summer of 2020</p>
+    </div>
+</body>
+</html>
