--- a/Skillsets.html
+++ b/Skillsets.html
@@ -18,8 +18,9 @@
         </div>
     </nav>
     <div class="Skills">
-        <p>
-            <img src="https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwibnJyPo5bmAhULbKwKHd8XCdQQjRx6BAgBEAQ&url=http%3A%2F%2Fintegralleadershipreview.com%2F2643-leadership-cartoon-3%2F&psig=AOvVaw24-kFkVYufmhSiIln_RMLy&ust=1575352388754250 " class="picture" />
-        </p>
+        <h1>SKills and Characteristics</h1>
         <p>LEADERSHIP</p>
+        <p>MULTITASKER</p>
+        <p>COMMUNICATOR</p>
+        <p>SQL, C#, JSON</p>
     </div>
