--- a/Home.html
+++ b/Home.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8" />
-    <link href="stylesheet" rel="stylesheet.css" />
+    <link href="Stylin.css" rel="stylesheets" />
     <title>Seth Van Horn</title>
     <h1>Seth Van Horn</h1>
 </head>
@@ -12,6 +12,7 @@
         <div class="box">
             <ul>
                 <li><a href="Home.html">Home</a></li>
+                <li><a href="AboutMe.html">About Me</a></li>
                 <li><a href="Projects.html">Projects</a></li>
                 <li><a href="Skillsets.html">Skillsets</a></li>
 
@@ -19,6 +20,7 @@
         </div>
     </nav>
     <div id="Introduction">
+
         <h2>Introduction</h2>
         <p>Strong professional with a Bachelor's degree focused in Management information Systems and Entrepreneurship & Venture Management from the University of Oklahoma. Experienced in several programming languages including C#, SQL, & Java. A clear understanding of the Oil and Gas and OFC industry. Motivated individual seeking full-time employment in the Summer of 2020</p>
     </div>
