--- a/Skillsets.html
+++ b/Skillsets.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link href="Stylin" rel="Stylin.css" />
+    <link href="Stylin.css" rel="stylesheet" />
     <title>Seth Van Horn</title>
 </head>
 <body>
