--- a/About Me.html
+++ b/About Me.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="utf-8" />
-    <link href="stylesheet" rel="stylesheet.css" />
+    <link href="Stylin.css" rel="stylesheet" />
     <title>Seth Van Horn</title>
 </head>
 <body>
@@ -11,6 +11,7 @@
         <div class="box">
             <ul>
                 <li><a href="Home.html">Home</a></li>
+                <li><a href="AboutMe.html">About Me</a></li>
                 <li><a href="Projects.html">Projects</a></li>
                 <li><a href="Skillsets.html">Skillsets</a></li>
 
