--- a/About Me.html
+++ b/About Me.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link href="Stylin.css" rel="stylesheet" />
+    <link href="" rel="stylesheet" />
     <title>Seth Van Horn</title>
 </head>
 <body>
@@ -11,7 +11,7 @@
         <div class="box">
             <ul>
                 <li><a href="Home.html">Home</a></li>
-                <li><a href="AboutMe.html">About Me</a></li>
+                <li><a href="About Me.html">About Me</a></li>
                 <li><a href="Projects.html">Projects</a></li>
                 <li><a href="Skillsets.html">Skillsets</a></li>
 
