--- a/Index.html
+++ b/Index.html
@@ -1,4 +1,5 @@
-<!--Seth Van Horn-->
+<!--->-Seth Van Horn-->
+<!--->-Seth Van Horn-->
 
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
