--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,4 @@
-<!--->-Seth Van Horn-->
-<!--->-Seth Van Horn-->
-
+﻿<!--->-Seth Van Horn-->
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 
