--- a/About Me.html
+++ b/About Me.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <link href="" rel="stylesheet" />
+    <link href="Stylin.css" rel="stylesheets" />
     <title>Seth Van Horn</title>
 </head>
 <body>
